--- a/login.css
+++ b/login.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     min-height: 100vh;
     font-family: system-ui, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    background: url(images/backgrounds/val-bg.jpg);
+    background: url(backgrounds/val-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
