--- a/login.css
+++ b/login.css
@@ -16,7 +16,7 @@ body {
     height: 500px;
     background: red;
     overflow: hidden;
-   background: url(images/backgrounds/background.png);
+   background: url(backgrounds/background.png);
     border-radius: 10px;
     box-shadow: 5px 20px 50px #000;
 }
